Fix issue where game would be too big for small browser windows

--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 canvas {
-    transform: scale(0.4);
     transform-origin: top left;
 }
 
